--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
             <meta http-equiv="X-UA-Compatible" content="chrome=1">
-                <title>{{ Ashkan Saboori }} by {{ site.github.owner_name }}</title>
+                <title>{{ site.title }} by {{ site.github.owner_name }}</title>
                 <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
                     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
                     <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
@@ -16,7 +16,7 @@
     <body>
         
         <header>
-            <h1>{{ site.title | default: site.github.repository_name }}</h1>
+            <h1>{{ Ashkan Saboori<br> Unveristy of Calfornia at Davis<br> ashsaboori@ucdavis.edu | default: site.github.repository_name }}</h1>
             <p>{{ site.description | default: site.github.project_tagline }}</p>
         </header>
         
