--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
     <body>
         
         <header>
-            <h1>{{ Ashkan Saboori<br> Unveristy of Calfornia at Davis<br> ashsaboori@ucdavis.edu | default: site.github.repository_name }}</h1>
+            <h1>{{ Ashkan Saboori<br> Unveristy of Calfornia at Davis<br> ashsaboori@ucdavis.edu }}</h1>
             <p>{{ site.description | default: site.github.project_tagline }}</p>
         </header>
         
